# pixelmap

./: .gitignore  LICENSE  README.md
.cargo/: config.toml
python/: pyproject.toml
python/src/: ac_grid.py  affine_transform.py  affine_transform_cell.py  circlualr_feature_descriptor.py  circlular_feature_descriptor_matcher.py  circular_feature_grid.py  correspondence_mapping_algorithm.py  correspondence_scoring.py  (+5 more)
rust/: Cargo.toml  README.md
rust/pixelmap/: Cargo.toml  build.rs
rust/pixelmap/src/: ac_grid.rs  affine_transform.rs  affine_transform_cell.rs  circular_feature_descriptor.rs  circular_feature_descriptor_matcher.rs  circular_feature_grid.rs  correspondence_mapping_algorithm.rs  correspondence_scoring.rs  cuda2.rs  cuda_bindings2.rs  dense_photo_map.rs  feature_pair.rs  lib.rs  model_3d.rs  photo.rs  pixelmap_processor.rs
rust/pixelmap/src/cuda/: README.md  bindings.rs  correspondence_mapping.rs  dense_photo_map.rs  feature_grid.rs  feature_matcher.rs  memory.rs  mod.rs  model_3d.rs  photo_processor.rs  transform.rs
rust/pixelmap/src/cuda/kernels/: circular_feature_grid.cu  circular_feature_matcher.cu  core.rs  correspondence.rs  correspondence_mapping.cu  dense_map.rs  feature_extraction.cu  feature_extraction.rs  feature_matching.cu  interpolate_grid.cu  mod.rs  model_3d.cu  model_3d.rs  optimized_operations.cu  photo_processing.cu  photo_processing.rs  transform.cu  transform.rs
rust/pixelmap/src/cuda_bindings/: common.rs  correspondence.rs  dense_map.rs  feature_matcher.rs  memory_management.rs  mod.rs  photo_processor.rs  transform.rs
(+7 files in other folders)
